Footer alignment tiny fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,6 +58,7 @@ footer {
 	ul {
 		display: flex;
 		flex-wrap: wrap;
+		align-items: center;
 		list-style: none;
 	}
 	
